# ds-unidad-2-actividad-2-listasdobleenlazadas-Emores2006

./: CMakeLists.txt  Doxyfile  ListaDeCarga.cpp  ListaDeCarga.h  README.md  RotorDeMapeo.cpp  RotorDeMapeo.h  SerialReader.cpp  SerialReader.h  TramaBase.h  Tramas.cpp  Tramas.h  codigo_arduino_act2_unidad2.ino  main.cpp
docs/html/: CMakeCXXCompilerId_8cpp.html  ListaDeCarga_8cpp.html  ListaDeCarga_8cpp_8o_8d.html  ListaDeCarga_8cpp__incl.map  ListaDeCarga_8cpp__incl.md5  ListaDeCarga_8h.html  ListaDeCarga_8h__dep__incl.map  ListaDeCarga_8h__dep__incl.md5  ListaDeCarga_8h__incl.map  ListaDeCarga_8h__incl.md5  ListaDeCarga_8h_source.html  ListaGestion_8h.html  ListaGestion_8h__dep__incl.map  ListaGestion_8h__dep__incl.md5  ListaGestion_8h__incl.map  ListaGestion_8h__incl.md5  ListaGestion_8h_source.html  ListaSensor_8h.html  ListaSensor_8h__dep__incl.map  ListaSensor_8h__dep__incl.md5  ListaSensor_8h__incl.map  ListaSensor_8h__incl.md5  ListaSensor_8h_source.html  README_8md.html  RotorDeMapeo_8cpp.html  RotorDeMapeo_8cpp_8o_8d.html  RotorDeMapeo_8cpp__incl.map  RotorDeMapeo_8cpp__incl.md5  RotorDeMapeo_8h.html  RotorDeMapeo_8h__dep__incl.map  RotorDeMapeo_8h__dep__incl.md5  RotorDeMapeo_8h_source.html  SensorBase_8h.html  SensorBase_8h__dep__incl.map  SensorBase_8h__dep__incl.md5  SensorBase_8h__incl.map  SensorBase_8h__incl.md5  SensorBase_8h_source.html  SensorPresion_8h.html  SensorPresion_8h__dep__incl.map  (+133 more)
docs/html/search/: all_0.js  all_11.js  all_12.js  all_13.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  pages_0.js  pages_1.js  pages_2.js  pages_4.js  pages_5.js  searchdata.js  variables_0.js  (+2 more)
docs/latex/: CMakeCXXCompilerId_8cpp.tex  ListaDeCarga_8cpp.tex  ListaDeCarga_8cpp_8o_8d.tex  ListaDeCarga_8cpp__incl.md5  ListaDeCarga_8h.tex  ListaDeCarga_8h__dep__incl.md5  ListaDeCarga_8h__incl.md5  ListaDeCarga_8h_source.tex  ListaGestion_8h.tex  ListaGestion_8h__dep__incl.md5  ListaGestion_8h__incl.md5  ListaGestion_8h_source.tex  ListaSensor_8h.tex  ListaSensor_8h__dep__incl.md5  ListaSensor_8h__incl.md5  ListaSensor_8h_source.tex  RotorDeMapeo_8cpp.tex  RotorDeMapeo_8cpp_8o_8d.tex  RotorDeMapeo_8cpp__incl.md5  RotorDeMapeo_8h.tex  RotorDeMapeo_8h__dep__incl.md5  RotorDeMapeo_8h_source.tex  SensorBase_8h.tex  SensorBase_8h__dep__incl.md5  SensorBase_8h__incl.md5  SensorBase_8h_source.tex  SensorPresion_8h.tex  SensorPresion_8h__dep__incl.md5  SensorPresion_8h__incl.md5  SensorPresion_8h_source.tex  SensorTemperatura_8h.tex  SensorTemperatura_8h__dep__incl.md5  SensorTemperatura_8h__incl.md5  SensorTemperatura_8h_source.tex  SerialReader_8cpp.tex  SerialReader_8cpp_8o_8d.tex  SerialReader_8cpp__incl.md5  SerialReader_8h.tex  SerialReader_8h__dep__incl.md5  SerialReader_8h__incl.md5  (+57 more)
